# terrain_map_depth

./: README.md
Azure_Kinect_ROS_Driver/launch/: driver.launch
ROS_gazelle_gogo/: CMakeLists.txt  package.xml
ROS_gazelle_gogo/action/: Motion.action
ROS_gazelle_gogo/launch/: vision_sensor.launch  vision_walk.launch
ROS_gazelle_gogo/msg/: update.msg
ROS_gazelle_gogo/rviz/: footstep_planning_example.rviz
ROS_gazelle_gogo/src/: client_depth.cpp  client_depth_NP.cpp  client_depth_SS.cpp  client_depth_obstacle.cpp  com_estimate.cpp  detect_peak.cpp  lanpodo2ros.h  lanros2podo.h  test_footstep.cpp  test_footstep_vision.cpp  test_footstep_vision_backup.cpp  wrapper.cpp
SGVR_step_planner/: questions.txt
SGVR_step_planner/mobile_path_planning/: CMakeLists.txt  package.xml
SGVR_step_planner/mobile_path_planning/include/mobile_path_planning/: collision_checker.h  configuration.h  path_planner.h  step_planner.h  stepable_region.h
SGVR_step_planner/mobile_path_planning/include/quadmap/: conversion.h  inttype.h
SGVR_step_planner/mobile_path_planning/msg/: Foot.msg  StepsStamped.msg
SGVR_step_planner/mobile_path_planning/src/: .goutputstream-YP9MG0  CMakeLists.txt  collision_checker.cpp  fake_control.cpp  fake_octomap.cpp  fake_octomap.cpp.old  fake_octomap_new.cpp  mobile_path_planning.cpp  mobile_path_planning_gazelle.cpp  path_planner.cpp  step_planner.cpp  stepable_region.cpp
SGVR_step_planner/synthetic_octomap_generator/: CMakeLists.txt  package.xml
SGVR_step_planner/synthetic_octomap_generator/include/synthetic_octomap_generator/: environment.h  object.h
SGVR_step_planner/synthetic_octomap_generator/launch/: demo.launch  demo2.launch  terrain_rviz.launch
SGVR_step_planner/synthetic_octomap_generator/rviz/: footstep_planning_example.rviz  rviz.rviz  rviz2.rviz  terrain_map.rviz
SGVR_step_planner/synthetic_octomap_generator/src/: classify_octomap_region.cpp  generate_synthetic_scene.cpp
SGVR_step_planner/synthetic_octomap_generator/src/synthetic_octomap_generator/: environment.cpp
SGVR_step_planner/synthetic_octomap_generator/world_configuration/: environment.txt  scene1.txt  stepable.txt  stepable_scene1.txt  stepable_scene2.txt  stepable_scene3.txt  stepable_scene4.txt  stepping_region_narrowpath.txt  stepping_region_steppable.txt
floor_octomap/: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
floor_octomap/config/: flatten.yaml  flatten_0416.yaml  flatten_pointcloud.yaml  flatten_pointcloud_obstacle.yaml
floor_octomap/include/: modify_octomap.h  modify_octomap_0416.h
floor_octomap/launch/: code_backup.launch  gazebo_octomap.launch  modify_octomap_dvo.launch  modify_octomap_only.launch  modify_octomap_only_0416.launch  modify_octomap_only_0519.launch  modify_octomap_only_0720.launch  modify_octomap_orb.launch  octomap.launch  testing.launch
floor_octomap/msg/: BoundingBox.msg  BoundingBoxArray.msg
floor_octomap/rviz/: dvo_rviz_config.rviz  only_rviz_config.rviz  orb_rviz_config.rviz  pointcloud_rviz_config.rviz
floor_octomap/scripts/: depth_image_filter_node.py  flatten_octomap_service.py  flatten_octomap_service_0416.py  ransac_lib.py  send_map_request.py  tf_alias_node.py
floor_octomap/scripts/boundary_detector/: boundary_detection.py  boundary_detection_node
floor_octomap/src/: cloud_voxel_filter_node.cpp  flatten_pointcloud_node.cpp  flatten_pointcloud_node_0527.cpp  flatten_pointcloud_node_0720.cpp  modify_octomap.cpp  modify_octomap_0416.cpp  modify_octomap_0416_node.cpp  modify_octomap_node.cpp
hubo_planner/: CMakeLists.txt  package.xml
hubo_planner/config/: footstep.yaml
hubo_planner/include/collision_detector/: collision_detector.h  primitive_aabb.h  primitive_box.h  primitive_circle.h  primitive_obb.h
hubo_planner/include/footstep_planner/: footstep_planner.h  footstep_planner_node.h
hubo_planner/include/hubo_planner/: configuration.h  utils.h  visualizer.h
hubo_planner/msg/: Footstep.msg  FootstepsStamped.msg
hubo_planner/rviz/: footstep_planning_example.rviz  footstep_planning_example2.rviz
hubo_planner/src/: footstep_planning.cpp  footstep_subscribe_example.cpp
hubo_planner/src/collision_detector/: collision_detector.cpp
hubo_planner/src/footstep_planner/: footstep_planner.cpp
